fix images overlapping each other

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -1996,7 +1996,8 @@ a.ueditor-action-pickercancel {
 .ueditor-insert.upfront-inserted_image-wrapper, .ueditor-insert.upfront-inserted_image-wrapper:hover {
   outline: none !important;
   background: none !important;
-  margin: 0 -15px; }
+  margin: 0 -15px;
+  clear: both; }
 
 /*.upfront-inserted_image-wrapper .wp-caption-text,
 .uinsert-image-wrapper{
