--- a/styles/sass/partials/_ueditor-inserts.scss
+++ b/styles/sass/partials/_ueditor-inserts.scss
@@ -112,6 +112,7 @@ a.ueditor-action-pickercancel{
   outline: none !important;
   background: none !important;
   margin: 0 -15px;
+  clear: both;
 }
 /*.upfront-inserted_image-wrapper .wp-caption-text,
 .uinsert-image-wrapper{
